refactor data retrieval logic and add endpoint for user content